# Cosserat-Solver

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  compare_seismograms.py  meson.build  noxfile.py  plot_seismograms.py  pyproject.toml
.github/workflows/: ci.yml
comparisons/: .gitignore
comparisons/default/solver/: params.yaml
comparisons/default/solver/output/: AA.S0001.S2.BXX.semd  AA.S0001.S2.BXY.semr  AA.S0001.S2.BXZ.semd
comparisons/default/specfem/output/: AA.S0001.S2.BXX.semd  AA.S0001.S2.BXY.semc  AA.S0001.S2.BXY.semir  AA.S0001.S2.BXY.semr  AA.S0001.S2.BXZ.semd  AA.S0002.S2.BXX.semd  AA.S0002.S2.BXY.semc  AA.S0002.S2.BXY.semir  AA.S0002.S2.BXY.semr  AA.S0002.S2.BXZ.semd  AA.S0003.S2.BXX.semd  AA.S0003.S2.BXY.semc  AA.S0003.S2.BXY.semir  AA.S0003.S2.BXY.semr  AA.S0003.S2.BXZ.semd  AA.S0004.S2.BXX.semd  AA.S0004.S2.BXY.semc  AA.S0004.S2.BXY.semir  AA.S0004.S2.BXY.semr  AA.S0004.S2.BXZ.semd
comparisons/f8/solver/: params.yaml
comparisons/f8/solver/output/: AA.S0001.S2.BXX.semd  AA.S0001.S2.BXY.semr  AA.S0001.S2.BXZ.semd  AA.S0002.S2.BXX.semd  AA.S0002.S2.BXY.semr  AA.S0002.S2.BXZ.semd  AA.S0003.S2.BXX.semd  AA.S0003.S2.BXY.semr  AA.S0003.S2.BXZ.semd  AA.S0004.S2.BXX.semd  AA.S0004.S2.BXY.semr  AA.S0004.S2.BXZ.semd
comparisons/f8/specfem/: master_config.yaml
comparisons/f8/specfem/output/: AA.S0001.S2.BXY.semc  AA.S0001.S2.BXY.semir  AA.S0002.S2.BXX.semd  AA.S0002.S2.BXY.semc  AA.S0002.S2.BXY.semir  AA.S0002.S2.BXY.semr  AA.S0002.S2.BXZ.semd  AA.S0003.S2.BXY.semir  AA.S0003.S2.BXZ.semd  AA.S0004.S2.BXY.semc  AA.S0004.S2.BXY.semr
comparisons/f8/specfem/results/: AA.S0001.S2.BXX.semd  AA.S0001.S2.BXY.semr  AA.S0001.S2.BXZ.semd  AA.S0003.S2.BXX.semd  AA.S0003.S2.BXY.semc  AA.S0003.S2.BXY.semr  AA.S0004.S2.BXX.semd  AA.S0004.S2.BXY.semir  AA.S0004.S2.BXZ.semd
comparisons/set3/solver/: params.yaml
comparisons/set3/solver/output/: AA.S0001.S2.BXX.semd  AA.S0001.S2.BXY.semr  AA.S0001.S2.BXZ.semd  AA.S0002.S2.BXX.semd  AA.S0002.S2.BXY.semr  AA.S0002.S2.BXZ.semd  AA.S0003.S2.BXX.semd  AA.S0003.S2.BXY.semr  AA.S0003.S2.BXZ.semd  AA.S0004.S2.BXX.semd  AA.S0004.S2.BXY.semr  AA.S0004.S2.BXZ.semd
comparisons/set3/specfem/: master_config.yaml
comparisons/set3/specfem/output/: AA.S0001.S2.BXX.semd  AA.S0001.S2.BXY.semr  AA.S0001.S2.BXZ.semd  AA.S0002.S2.BXY.semc  AA.S0002.S2.BXY.semr  (+6 more)
comparisons/set5_lofreq/solver/: params.yaml
comparisons/set5_lofreq/specfem/: Par_File  master_config.yaml  source.yaml
examples/cosserat_3d_benchmark/: Snakefile  compare_traces.py  params.yaml
examples/cosserat_3d_benchmark/reference_traces/: DB.X55.S3.HXY.semd  DB.X55.S3.HXZ.semd  DB.X65.S3.HXY.semd  DB.X65.S3.HXY.semr  DB.X75.S3.HXY.semr  DB.X75.S3.HXZ.semd  DB.X75.S3.HXZ.semr
src/cosserat_solver/: CMakeLists.txt  __init__.py  _cosserat_core_3d_wrapper.py  _dispersion_core_2d_wrapper.py  _dispersion_core_3d_wrapper.py  _dispersion_core_wrapper.py  _elastic_core_3d_wrapper.py  _integrator_core_2d_wrapper.py  _integrator_core_wrapper.py  classical_greens.py  cli.py  consts.py  cosserat_3d.py  dispersion.py  dispersion3d.py  fourier.py  greens3d.py  greens_wrapper.py  integrator.py  read_yaml.py  ricker.py  source.py  trace_generator.py
src/cosserat_solver/dim2/: _dispersion_core_2d_wrapper.py  _dispersion_core_wrapper.py  _integrator_core_2d_wrapper.py  _integrator_core_wrapper.py  integrator.py
src/cosserat_solver/dim2/fortran/: CMakeLists.txt  integrator_core.f90  integrator_core_c.f90
src/cosserat_solver/dim3/: __init__.py  _cosserat_core_3d_wrapper.py  _cosserat_core_wrapper.py  _dispersion_core_3d_wrapper.py  _dispersion_core_wrapper.py  _elastic_core_3d_wrapper.py  _elastic_core_wrapper.py  cosserat.py  cosserat_3d.py  dispersion.py
src/cosserat_solver/dim3/fortran/: CMakeLists.txt  cosserat_core.f90  cosserat_core_c.f90  cosserat_wrapper.c  dispersion_core_c.f90  dispersion_wrapper.c  elastic_core.f90  elastic_core_c.f90  elastic_wrapper.c
src/cosserat_solver/fortran/: CMakeLists.txt  dispersion_core.f90  dispersion_core_c.f90  dispersion_wrapper.c  generate_consts.py  integrator_core.f90  integrator_core_c.f90  integrator_wrapper.c  meson.build
src/cosserat_solver/fortran/amos/: amos_deps.txt  r1mach_modern.f  zabs.f  zacai.f  zacon.f  zairy.f  zbesh.f  zbinu.f  zbknu.f  zbuni.f  zmlri.f  zs1s2.f  zsqrt.f  zuni1.f  zunk2.f  zwrsk.f
src/cosserat_solver/fortran/dim2/: branch_config.f90  dispersion_wrapper.c  integrator_core.f90  integrator_core_c.f90  integrator_wrapper.c
src/cosserat_solver/fortran/dim3/: cosserat_core.f90  cosserat_core_c.f90  cosserat_wrapper.c  dispersion_core.f90  elastic_core.f90  elastic_core_c.f90  elastic_wrapper.c
src/cosserat_solver/fortran_common/: CMakeLists.txt  kinds.f90
src/cosserat_solver/fortran_common/amos/: d1mach_modern.f  i1mach_modern.f  zasyi.f  zdiv.f  zkscl.f  zlog.f  zrati.f  zseri.f  zunhj.f  zuni2.f  zunk1.f  zuoik.f
tests/: conftest.py  test_dispersion.py  test_integrator.py  test_ricker.py
tests/displacement-tests/: README.md  conftest.py  test_reference_agreement.py
tests/examples/: test_examples_run.py
tests/test_comparisons/: compare_integrators.py  test_greens_wrapper.py  test_integral_numerics.py
tests/test_fortran/: test_integrator_core.py
tests/test_python/: test_cosserat_3d_uncoupled_limit.py  test_fourier.py  test_integrator.py  test_ricker.py
tests/unit-tests/: conftest.py  test_fourier.py  test_greens_wrapper.py
tests/unit-tests/dim2/: test_integral_numerics.py  test_integrator_core.py
tests/unit-tests/dim3/: test_cosserat.py  test_cosserat_core.py  test_cosserat_uncoupled_limit.py  test_dispersion.py  test_dispersion_core.py  test_elastic_core.py
tests/unit-tests/test-comparisons/: test_greens_wrapper.py
tests/unit-tests/test-fortran/: test_cosserat_core_3d.py  test_dispersion_core.py  test_dispersion_core_2d.py  test_dispersion_core_3d.py  test_elastic_core_3d.py  test_integrator_core.py  test_integrator_core_2d.py
tests/unit-tests/test-python/: test_cosserat_3d.py  test_dispersion_2d.py  test_dispersion_3d.py  test_integrator.py  test_ricker.py
(+141 files in other folders)
